# cpdp

./: .gitignore  main.py  pyproject.toml
src/: db.sqlite3
src/app_blog/: urls.py  utility.py  views.py
src/app_blog/migrations/: 0001_table_blog_post.py
src/app_blog/templates/app_blog/: index.html  list_post.html
src/app_blog/views/: __init__.py  create.py  list.py  read.py
src/app_gis/: apps.py  urls.py
src/app_gis/templates/app_gis/: index_map.html  upload.html
src/app_gis/views/: __init__.py  map.py  upload.py
src/app_landing/: views.py
src/app_landing/templates/app_landing/: index.html
src/cpdp/: settings.py  urls.py
